Fix following letter and navigation on mobile screens

--- a/source/assets/stylesheets/modules/_main_following_letter.css.scss
+++ b/source/assets/stylesheets/modules/_main_following_letter.css.scss
@@ -6,8 +6,16 @@
   max-width: 1200px;
   padding: 30px 0 30px 30px;
 
+  @media #{$small-and-down} {
+    padding: 20px 0 20px 20px;
+  }
+
   .col {
     padding: 0 20px;
+
+    @media #{$small-and-down} {
+      padding: 0;
+    }
   }
 
   &-first-letter {
@@ -27,6 +35,10 @@
     .main-following-letter-sign,
     blockquote {
       padding-right: 50px;
+
+      @media #{$small-and-down} {
+        padding-right: 20px;
+      }
     }
 
     @media #{$small-and-down} {
